--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240125140344">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240125170221">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,177 @@
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<nav class="menu__body">
 						<ul class="menu__list  menu__list_pc">
-							<li class="menu__item"><button type="button" class="class">Услуги</button></li>
+							<li class="menu__item service-menu">
+								<button type="button" class="service-menu__btn">Услуги</button>
+								<div class="service-menu__wrapper">
+									<ul class="service-menu__list">
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Пластика</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/breast.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика груди
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Увеличение груди</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка груди(мастопексия)</a>
+														<a href="#" class="service-menu__sub-link">Коррекция тубулярности груди</a>
+														<a href="#" class="service-menu__sub-link">Коррекция асимметрии</a>
+														<a href="#" class="service-menu__sub-link">Уменьшение груди</a>
+														<a href="#" class="service-menu__sub-link">Липофилинг груди</a>
+														<a href="#" class="service-menu__sub-link">Повторная пластика груди</a>
+														<a href="#" class="service-menu__sub-link">3D-form</a>
+														<a href="#" class="service-menu__sub-link">Пластика груди после мастэктомии</a>
+														<a href="#" class="service-menu__sub-link">Грудные импланты</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/face.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика лица
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Лифтинг средней зоны лица</a>
+														<a href="#" class="service-menu__sub-link">Блефаропластика (подтяжка век)</a>
+														<a href="#" class="service-menu__sub-link">Эндотины в эндоскопии лица</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка лица</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка лба и бровей</a>
+														<a href="#" class="service-menu__sub-link">Пластика шеи и подбородка</a>
+														<a href="#" class="service-menu__sub-link">SMAS лифтинг</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг нижней части лица</a>
+														<a href="#" class="service-menu__sub-link">Ринопластика</a>
+														<a href="#" class="service-menu__sub-link">Отопластика</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/mini.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Минипластика
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Силуэт Лифт</a>
+														<a href="#" class="service-menu__sub-link">Чеклифтинг (глаза, щеки, скулы)</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг век и бровей</a>
+														<a href="#" class="service-menu__sub-link">Липосакция подбородка</a>
+														<a href="#" class="service-menu__sub-link">Липосакция Body Jet</a>
+														<a href="#" class="service-menu__sub-link">Устранение рубцов</a>
+													</div>
+												</div>
+											</div>
+										</li>
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Косметология</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+											</div>
+										</li>
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Гинекология</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/mini.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Минипластика
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Силуэт Лифт</a>
+														<a href="#" class="service-menu__sub-link">Чеклифтинг (глаза, щеки, скулы)</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг век и бровей</a>
+														<a href="#" class="service-menu__sub-link">Липосакция подбородка</a>
+														<a href="#" class="service-menu__sub-link">Липосакция Body Jet</a>
+														<a href="#" class="service-menu__sub-link">Устранение рубцов</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/breast.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика груди
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Увеличение груди</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка груди(мастопексия)</a>
+														<a href="#" class="service-menu__sub-link">Коррекция тубулярности груди</a>
+														<a href="#" class="service-menu__sub-link">Коррекция асимметрии</a>
+														<a href="#" class="service-menu__sub-link">Уменьшение груди</a>
+														<a href="#" class="service-menu__sub-link">Липофилинг груди</a>
+														<a href="#" class="service-menu__sub-link">Повторная пластика груди</a>
+														<a href="#" class="service-menu__sub-link">3D-form</a>
+														<a href="#" class="service-menu__sub-link">Пластика груди после мастэктомии</a>
+														<a href="#" class="service-menu__sub-link">Грудные импланты</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</li>
 							<li class="menu__item"><a href="" class="menu__link">Цены</a></li>
 							<li class="menu__item"><a href="" class="menu__link">Специалисты</a></li>
 							<li class="menu__item"><a href="" class="menu__link">Наши работы</a></li>
@@ -84,9 +254,7 @@
 
 
 		<main class="page">
-			<div class="page__container">
-				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores officia quidem cupiditate dolore, molestiae, ad rem consequuntur deserunt voluptate sequi fugiat animi? Quaerat odit ducimus iure expedita assumenda ipsam nobis voluptates, corporis, maiores molestias nam aliquid numquam, quo ab optio repellendus molestiae mollitia recusandae. Unde blanditiis a fugiat ullam suscipit dolor quisquam dolorum qui beatae, sint non corrupti voluptatum assumenda at vitae. Praesentium adipisci, ab voluptatum veniam placeat a quae. Doloribus, ullam optio molestias perspiciatis amet ut repudiandae aperiam enim odit recusandae neque, aliquid quae reprehenderit vero, voluptate sit illo quisquam porro pariatur minus. Nihil accusamus doloribus aut repellendus aperiam recusandae? Alias beatae dolores dolorem ullam minima eligendi tempora temporibus, reiciendis quas exercitationem vero omnis nesciunt voluptas in accusantium amet rem, eaque doloremque inventore. Magni eos, ad molestias a ab et nemo praesentium voluptates totam ullam facilis quos libero atque quis tempora nobis soluta error id qui. Earum explicabo totam suscipit, delectus repellendus, labore in ad dolores fugiat voluptatum, veritatis mollitia asperiores reprehenderit deleniti provident doloribus. Repellat doloremque dolores illum quas placeat officiis veniam neque earum culpa, dignissimos commodi eaque. Voluptate cum consectetur mollitia ullam distinctio maiores dolore itaque animi nostrum totam. Voluptatem, quisquam id consequuntur non vel sint. Laudantium dignissimos laborum impedit itaque pariatur? Dolorum error sed temporibus laboriosam reprehenderit nesciunt nemo. Obcaecati ab doloribus non, ullam voluptate, rem, quo eligendi quibusdam molestiae aliquam reprehenderit? Blanditiis ratione pariatur minima dolore totam provident nisi nobis iste itaque doloremque, voluptatibus accusantium commodi, corporis ab earum cumque in ipsum aspernatur laudantium! Mollitia repellendus voluptatibus facilis ullam fuga consectetur atque? Quidem, eius. Molestiae facilis alias nisi! Eius dicta, labore cum quibusdam earum vel in aut qui accusantium facere impedit ipsa ut esse cupiditate, recusandae dolorem eligendi inventore aspernatur deleniti totam numquam delectus? Nam id accusantium dolore inventore aliquid ratione illo quibusdam non laboriosam molestias ipsam asperiores quidem, ducimus ipsa. Facere fuga esse, nulla quis odit illo error, aut porro nisi omnis corrupti ab tempora iusto. Sunt accusantium natus et vel enim similique eaque, mollitia molestias necessitatibus laboriosam exercitationem hic ad illum. Impedit necessitatibus delectus amet tempora omnis ipsa iste voluptatibus. Eum delectus vitae quos exercitationem dolor aspernatur! Sed dolorem voluptatum consequatur voluptas, possimus veniam, exercitationem optio repudiandae quia natus repellat saepe recusandae animi maxime, explicabo odit officiis adipisci? Sed impedit numquam exercitationem corporis voluptatibus, iusto odio sequi culpa velit suscipit illum atque consectetur officiis labore dolorum dicta? Ratione non, dolorem consectetur similique atque accusamus vitae. Ullam, autem! Voluptate nobis et veritatis ratione unde eos dolorem aspernatur alias repudiandae eum culpa cupiditate nam, magnam officiis aperiam recusandae at! Eligendi quam dignissimos, magni possimus aut eaque deserunt necessitatibus facilis sapiente? Minus doloribus, accusantium modi quia suscipit laboriosam delectus! Quasi nisi, autem fugiat nesciunt, cumque nobis animi voluptates debitis sit sequi explicabo nostrum voluptatum neque, praesentium pariatur possimus in reiciendis! Id officia provident temporibus, quaerat debitis fugiat nesciunt numquam iure alias quasi eveniet nihil excepturi labore tenetur tempore accusamus quas cum fugit dolor explicabo quidem mollitia aliquam neque? Unde, tempore. Tenetur non quis beatae adipisci est.
-			</div>
+
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -144,7 +312,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240125140344"></script>
+	<script src="js/app.min.js?_v=20240125170221"></script>
 </body>
 
 </html>
