--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240125140344">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240125170221">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,177 @@
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<nav class="menu__body">
 						<ul class="menu__list  menu__list_pc">
-							<li class="menu__item"><button type="button" class="class">Услуги</button></li>
+							<li class="menu__item service-menu">
+								<button type="button" class="service-menu__btn">Услуги</button>
+								<div class="service-menu__wrapper">
+									<ul class="service-menu__list">
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Пластика</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/breast.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика груди
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Увеличение груди</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка груди(мастопексия)</a>
+														<a href="#" class="service-menu__sub-link">Коррекция тубулярности груди</a>
+														<a href="#" class="service-menu__sub-link">Коррекция асимметрии</a>
+														<a href="#" class="service-menu__sub-link">Уменьшение груди</a>
+														<a href="#" class="service-menu__sub-link">Липофилинг груди</a>
+														<a href="#" class="service-menu__sub-link">Повторная пластика груди</a>
+														<a href="#" class="service-menu__sub-link">3D-form</a>
+														<a href="#" class="service-menu__sub-link">Пластика груди после мастэктомии</a>
+														<a href="#" class="service-menu__sub-link">Грудные импланты</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/face.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика лица
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Лифтинг средней зоны лица</a>
+														<a href="#" class="service-menu__sub-link">Блефаропластика (подтяжка век)</a>
+														<a href="#" class="service-menu__sub-link">Эндотины в эндоскопии лица</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка лица</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка лба и бровей</a>
+														<a href="#" class="service-menu__sub-link">Пластика шеи и подбородка</a>
+														<a href="#" class="service-menu__sub-link">SMAS лифтинг</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг нижней части лица</a>
+														<a href="#" class="service-menu__sub-link">Ринопластика</a>
+														<a href="#" class="service-menu__sub-link">Отопластика</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/mini.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Минипластика
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Силуэт Лифт</a>
+														<a href="#" class="service-menu__sub-link">Чеклифтинг (глаза, щеки, скулы)</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг век и бровей</a>
+														<a href="#" class="service-menu__sub-link">Липосакция подбородка</a>
+														<a href="#" class="service-menu__sub-link">Липосакция Body Jet</a>
+														<a href="#" class="service-menu__sub-link">Устранение рубцов</a>
+													</div>
+												</div>
+											</div>
+										</li>
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Косметология</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+											</div>
+										</li>
+										<li class="service-menu__item">
+											<a href="#" class="service-menu__link _icon-arrow"><span>Гинекология</span></a>
+											<div class="service-menu__content">
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/mini.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Минипластика
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Силуэт Лифт</a>
+														<a href="#" class="service-menu__sub-link">Чеклифтинг (глаза, щеки, скулы)</a>
+														<a href="#" class="service-menu__sub-link">Лифтинг век и бровей</a>
+														<a href="#" class="service-menu__sub-link">Липосакция подбородка</a>
+														<a href="#" class="service-menu__sub-link">Липосакция Body Jet</a>
+														<a href="#" class="service-menu__sub-link">Устранение рубцов</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/breast.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика груди
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Увеличение груди</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка груди(мастопексия)</a>
+														<a href="#" class="service-menu__sub-link">Коррекция тубулярности груди</a>
+														<a href="#" class="service-menu__sub-link">Коррекция асимметрии</a>
+														<a href="#" class="service-menu__sub-link">Уменьшение груди</a>
+														<a href="#" class="service-menu__sub-link">Липофилинг груди</a>
+														<a href="#" class="service-menu__sub-link">Повторная пластика груди</a>
+														<a href="#" class="service-menu__sub-link">3D-form</a>
+														<a href="#" class="service-menu__sub-link">Пластика груди после мастэктомии</a>
+														<a href="#" class="service-menu__sub-link">Грудные импланты</a>
+													</div>
+												</div>
+												<div class="service-menu__category">
+													<div class="service-menu__image">
+														<img src="img/menu-images/body.jpg" alt="image">
+													</div>
+													<h3 class="service-menu__title">
+														Пластика тела
+													</h3>
+													<div class="service-menu__links">
+														<a href="#" class="service-menu__sub-link">Липосакция</a>
+														<a href="#" class="service-menu__sub-link">Липоскульптурирование тела</a>
+														<a href="#" class="service-menu__sub-link">Миниабдоминопластика живота</a>
+														<a href="#" class="service-menu__sub-link">Полная абдоминопластика</a>
+														<a href="#" class="service-menu__sub-link">Пластика ягодиц</a>
+														<a href="#" class="service-menu__sub-link">Торсопластика</a>
+														<a href="#" class="service-menu__sub-link">Подтяжка рук</a>
+														<a href="#" class="service-menu__sub-link">Пластика голеней</a>
+														<a href="#" class="service-menu__sub-link">Интимная пластика</a>
+													</div>
+												</div>
+											</div>
+										</li>
+									</ul>
+								</div>
+							</li>
 							<li class="menu__item"><a href="" class="menu__link">Цены</a></li>
 							<li class="menu__item"><a href="" class="menu__link">Специалисты</a></li>
 							<li class="menu__item"><a href="" class="menu__link">Наши работы</a></li>
@@ -142,7 +312,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240125140344"></script>
+	<script src="js/app.min.js?_v=20240125170221"></script>
 </body>
 
 </html>
