--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 		<h2>Готовые страницы:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="prices.html">Цена</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
