--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240125222819">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240125224344">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -237,10 +237,12 @@
 							</li>
 							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/contacts.svg" alt="icon"><span>Контакты</span></a></li>
 						</ul>
-						<div class="menu__socials">
-							<a href="#" class="menu__tel _icon-phone">+7 (499) 226 21 89</a>
-							<a href="#" class="menu__tg _icon-tg"></a>
-							<a href="#" class="menu__vk _icon-vk"></a>
+						<div class="menu__socials ">
+							<div class="socials-wrapper">
+								<a href="#" class="menu__tel _icon-phone">+7 (499) 226 21 89</a>
+								<a href="#" class="menu__tg _icon-tg"></a>
+								<a href="#" class="menu__vk _icon-vk"></a>
+							</div>
 						</div>
 					</nav>
 				</div>
@@ -312,7 +314,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240125222819"></script>
+	<script src="js/app.min.js?_v=20240125224344"></script>
 </body>
 
 </html>
