--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240125232628">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240126004628">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -211,7 +211,7 @@
 									</div>
 								</details>
 							</li>
-							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
+							<li class="menu__item"><a href="prices.html" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
 							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/specialists.svg" alt="icon"><span>Специалисты</span></a></li>
 							<li class="menu__item">
 								<img src="img/icons/menu-icons/portfolio.svg" alt="icon">
@@ -255,6 +255,20 @@
 
 		<main class="page">
 			<a href="#" class="btn btn_dark">Text</a>
+			<div class="consultation-form">
+				<div class="consultation-form__container">
+					<form action="#" class="consultation-form__form">
+						<h2 class="consultation-form__title title">Записаться</h2>
+						<div class="consultation-form__inputs">
+							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
+							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+						</div>
+						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с<a href="#">Политикой конфиденциальности.</a></div>
+						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
+					</form>
+					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -284,7 +298,7 @@
 							<details class="spollers-footer__item">
 								<summary class="spollers-footer__title _icon-check">О клинике</summary>
 								<div class="spollers-footer__body">
-									<a href="#" class="spollers-footer__link">Цены</a>
+									<a href="prices.html" class="spollers-footer__link">Цены</a>
 									<a href="#" class="spollers-footer__link">Наши работы</a>
 									<a href="#" class="spollers-footer__link">Специалисты</a>
 									<a href="#" class="spollers-footer__link">Пациентам</a>
@@ -312,7 +326,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240125232628"></script>
+	<script src="js/app.min.js?_v=20240126004628"></script>
 </body>
 
 </html>
