--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240125232628">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240126004628">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -211,7 +211,7 @@
 									</div>
 								</details>
 							</li>
-							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
+							<li class="menu__item"><a href="prices.html" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
 							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/specialists.svg" alt="icon"><span>Специалисты</span></a></li>
 							<li class="menu__item">
 								<img src="img/icons/menu-icons/portfolio.svg" alt="icon">
@@ -284,7 +284,7 @@
 							<details class="spollers-footer__item">
 								<summary class="spollers-footer__title _icon-check">О клинике</summary>
 								<div class="spollers-footer__body">
-									<a href="#" class="spollers-footer__link">Цены</a>
+									<a href="prices.html" class="spollers-footer__link">Цены</a>
 									<a href="#" class="spollers-footer__link">Наши работы</a>
 									<a href="#" class="spollers-footer__link">Специалисты</a>
 									<a href="#" class="spollers-footer__link">Пациентам</a>
@@ -312,7 +312,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240125232628"></script>
+	<script src="js/app.min.js?_v=20240126004628"></script>
 </body>
 
 </html>
