--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240126004628">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240126031726">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -193,11 +193,11 @@
 									</ul>
 								</div>
 							</li>
-							<li class="menu__item"><a href="" class="menu__link">Цены</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Специалисты</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Наши работы</a></li>
-							<li class="menu__item"><a href="" class="menu__link">О клинике</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+							<li class="menu__item"><a href="prices.html" class="menu__link">Цены</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">Специалисты</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">Наши работы</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">О клинике</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
 						</ul>
 						<ul data-spollers data-one-spoller class="menu__list  menu__list_mobile">
 							<li class="menu__item">
@@ -211,7 +211,7 @@
 									</div>
 								</details>
 							</li>
-							<li class="menu__item"><a href="prices.html" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
+							<li class="menu__item"><a href="#" class="menu__link"><img src="img/icons/menu-icons/prices.svg" alt="icon"><span>Цены</span></a></li>
 							<li class="menu__item"><a href="" class="menu__link"><img src="img/icons/menu-icons/specialists.svg" alt="icon"><span>Специалисты</span></a></li>
 							<li class="menu__item">
 								<img src="img/icons/menu-icons/portfolio.svg" alt="icon">
@@ -254,7 +254,9 @@
 
 
 		<main class="page">
+			<!-- btn -->
 			<a href="#" class="btn btn_dark">Text</a>
+			<!-- form -->
 			<div class="consultation-form">
 				<div class="consultation-form__container">
 					<form action="#" class="consultation-form__form">
@@ -268,6 +270,15 @@
 					</form>
 					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
 				</div>
+			</div>
+			<!-- spollers -->
+			<div data-spollers class="spollers">
+				<details class="spollers__item">
+					<summary class="spollers__title">Пластическая хирургия</summary>
+					<div data-spollers class="spollers__content">
+
+					</div>
+				</details>
 			</div>
 		</main>
 		<footer class="footer">
@@ -326,7 +337,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240126004628"></script>
+	<script src="js/app.min.js?_v=20240126031726"></script>
 </body>
 
 </html>
