--- a/faq.html
+++ b/faq.html
@@ -254,7 +254,117 @@
 
 
 		<main class="page">
+			<div class="page__faq faq">
+				<div class="faq__container">
+					<h1 class="faq__title title">
+						Вопрос-ответ
+					</h1>
+					<div data-tabs class="faq__tabs tabs-faq">
+						<nav data-tabs-titles class="tabs-faq__navigation">
+							<button type="button" class="tabs-faq__title _tab-active"><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
+						</nav>
+						<div data-tabs-body class="tabs-faq__content">
+							<div class="tabs-faq__body faq-category">
+								<div data-spollers class="faq-category__spollers spollers">
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Увеличение груди</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Грудные импланты</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Коррекция асимметрии</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Подтяжка груди (мастопексия)</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Интимная пластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Подтяжка лица</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Полная абдоминопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Ринопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+								</div>
+							</div>
+							<div class="tabs-faq__body">
+							</div>
+							<div class="tabs-faq__body">
+							</div>
+						</div>
+					</div>
 
+					<div class="faq__consultation-form consultation-form">
+						<div class="consultation-form__container">
+							<form action="#" class="consultation-form__form">
+								<h2 class="consultation-form__title title">Записаться</h2>
+								<div class="consultation-form__inputs">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+								</div>
+								<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с<a href="#">Политикой конфиденциальности.</a></div>
+								<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
+							</form>
+							<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
