--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 	<div class="rootpage">
 		<h1>Верстка «doctorplactic»</h1>
-
 		<h2>Готовые страницы:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Главная</a></li>
 			<li><a target="_blank" href="prices.html">Цена</a></li>
+			<li><a target="_blank" href="faq.html">Вопросы ответы</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
